--- a/app/assets/style/helpers/_variables.scss
+++ b/app/assets/style/helpers/_variables.scss
@@ -10,8 +10,8 @@ $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
-$gray-500: #adb5bd !default;
-$gray-600: #6c757d !default;
+$gray-500: rgba(0, 0, 0, 0.6) !default;
+$gray-600: rgba(112, 112, 112, 1) !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
@@ -41,10 +41,12 @@ $pink:    #e83e8c !default;
 $red:     #dc3545 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
-$green:   #EDF4EE !default;
+$green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 $green-dark: #2A8356 !default;
+$green-light: #CDDDCD !default;
+$green-lighter: #EDF4EE !default;
 
 $colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
@@ -57,6 +59,7 @@ $colors: map-merge(
     "red":        $red,
     "orange":     $orange,
     "yellow":     $yellow,
+    "green-light": $green-light,
     "green":      $green,
     "green-dark": $green-dark,
     "teal":       $teal,
@@ -75,7 +78,8 @@ $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
-$dark:          $gray-800 !default;
+$dark:          $gray-500 !default;
+$dark2:         $gray-600 !default;
 
 $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
@@ -147,8 +151,7 @@ $spacers: map-merge(
     3: $spacer,
     4: ($spacer * 1.5),
     5: ($spacer * 2),
-    6: ($spacer * 3),
-    7: ($spacer * 4),
+    6: ($spacer * 3)
   ),
   $spacers
 );
@@ -242,7 +245,7 @@ $line-height-lg:              1.5 !default;
 $line-height-sm:              1.5 !default;
 
 $border-width:                1px !default;
-$border-color:                $gray-300 !default;
+$border-color:                $green-light !default;
 
 $border-radius:               .25rem !default;
 $border-radius-lg:            .3rem !default;
