--- a/app/assets/style/helpers/_variables.scss
+++ b/app/assets/style/helpers/_variables.scss
@@ -71,7 +71,7 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       $green !default;
+$primary:       $green-lighter !default;
 $secondary:     $green-dark !default;
 $success:       $green !default;
 $info:          $cyan !default;
@@ -80,6 +80,7 @@ $danger:        $pink !default;
 $light:         $gray-100 !default;
 $dark:          $gray-500 !default;
 $dark2:         $gray-600 !default;
+$background:    $green-lighter !default;
 
 $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
@@ -183,10 +184,10 @@ $body-color:                $gray-900 !default;
 //
 // Style anchor elements.
 
-$link-color:                              theme-color("primary") !default;
+$link-color:                              #000000 !default; // theme-color("primary") !default;
 $link-decoration:                         none !default;
-$link-hover-color:                        darken($link-color, 15%) !default;
-$link-hover-decoration:                   underline !default;
+$link-hover-color:                        $green-dark !default;// darken($link-color, 15%) !default;
+$link-hover-decoration:                   none !default;// underline !default;
 // Darken percentage for links with `.text-*` class (e.g. `.text-success`)
 $emphasized-link-hover-darken-percentage: 15% !default;
 
@@ -291,10 +292,8 @@ $font-family-base:            $font-family-sans-serif !default;
 // stylelint-enable value-keyword-case
 
 $font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
-$font-size-xl:                $font-size-base * 1.5 !default;
 $font-size-lg:                $font-size-base * 1.25 !default;
 $font-size-sm:                $font-size-base * .875 !default;
-$font-size-xs:                $font-size-base * 0.75 !default;
 
 $font-weight-lighter:         lighter !default;
 $font-weight-light:           300 !default;
