修改 user 姓名字體寬度與信箱字體顏色

--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -40,8 +40,8 @@
       <div class="user d-flex align-items-center mt-auto pl-5">
         <img src="./assets/images/andychen.jpeg" alt="" class="user__avatar">
         <div class="user__detail ml-3">
-          <p class="user__detail__name mb-1">Andy Chen</p>
-          <p class="user__detail__other mb-0">andy0401@mail.com</p>
+          <p class="user__detail__name mb-1 font-weight-bold">Andy Chen</p>
+          <p class="user__detail__other mb-0 text-dark">andy0401@mail.com</p>
         </div>
       </div>
     </aside>
