--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,6 +1,11 @@
 @import "functions";
 @import "./helpers/variables";
-@import "bootstrap";
+@import "../../../node_modules/bootstrap/scss/mixins";
+
+@import "../../../node_modules/bootstrap/scss/reboot";
+@import "../../../node_modules/bootstrap/scss/type";
+@import "../../../node_modules/bootstrap/scss/grid";
+@import "../../../node_modules/bootstrap/scss/utilities";
 
 @import "./layout/sidebar";
 
