--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,11 +1,11 @@
 @import "functions";
 @import "./helpers/variables";
-@import "../../../node_modules/bootstrap/scss/mixins";
+@import "mixins";
 
-@import "../../../node_modules/bootstrap/scss/reboot";
-@import "../../../node_modules/bootstrap/scss/type";
-@import "../../../node_modules/bootstrap/scss/grid";
-@import "../../../node_modules/bootstrap/scss/utilities";
+@import "reboot";
+@import "type";
+@import "grid";
+@import "utilities";
 
 @import "./layout/sidebar";
 
