--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -38,10 +38,10 @@
         </li>
       </ul>
       <div class="user d-flex align-items-center mt-auto pl-5">
-        <img src="./assets/images/andychen.jpeg" alt="" class="user__avatar">
+        <a href="#"><img src="./assets/images/andychen.jpeg" alt="" class="user__avatar"></a>
         <div class="user__detail ml-3">
-          <p class="user__detail__name mb-1 font-weight-bold">Andy Chen</p>
-          <p class="user__detail__other mb-0 text-dark">andy0401@mail.com</p>
+          <a href="#" class="user__detail__name mb-1 font-weight-bold">Andy Chen</a>
+          <p class="user__detail__other mb-0 text-dark fz-14">andy0401@mail.com</p>
         </div>
       </div>
     </aside>
