--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -15,7 +15,7 @@
 
 <body>
   <div class="d-flex">
-    <aside class="sidebar vh-100 d-flex flex-column py-5 bg-primary">
+    <aside class="sidebar d-flex flex-column py-5 bg-primary">
       <h1 class="logo mb-5 pl-5"><a href="#"></a></h1>
       <ul class="menu">
         <li>
