--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,18 +1,19 @@
+/* Bootstrap4 required */
 @import "functions";
 @import "./helpers/variables";
 @import "mixins";
+@import "bootstrap";
 
-@import "reboot";
-@import "type";
-@import "buttons";
-@import "grid";
-@import "utilities";
 
 @import "./base";
 @import "./helpers/utilities";
 
+/* Layout */
 @import "./layout/sidebar";
 
+/* Page */
 @import "./page/assignment";
+@import "./page/admin";
 
+/* Module */
 @import "./module/user";
